--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,1 @@
-VITE_REACT_APP_HOSTED_URL = "https://paytm-app-1-ysoj.onrender.com"
+VITE_REACT_APP_HOSTED_URL=https://paytm-app-1-ysoj.onrender.com
